<resources>
    <string name="title_activity_my_medications">Medicațiile mele</string>
    <string name="no_medication_to_display">Acestui pacient nu i-a fost prescrisă încă nicio medicație de către niciunul din doctorii săi.</string>
    <string name="adaug_medicatie">Adaugă medicație</string>
    <string name="scan_medication">Scanează medicație</string>
    <string name="delete_medication">Șterge medicație</string>

    <string name="save_menu">save</string>
    <string name="save_changes">Salvează modificările</string>
    <string name="logo">Logo</string>
    <string name="title_activity_login">Sign in</string>

    <string name="registerTitle">Crează-ți cont!</string>
    <string name="cont_doctor">Doctor</string>
    <string name="cont_patient">Pacient</string>
    <string name="email">Email</string>
    <string name="password">Parolă</string>

    <string name="register_doctor">Înregistrează-te ca doctor!</string>
    <string name="first_name">Prenume</string>
    <string name="last_name">Nume</string>
    <string name="phone">Număr de telefon</string>
    <string name="specialisation">Specializare</string>
    <string name="save">Salvează</string>

    <string name="register_patient">Înregistrează-te ca pacient!</string>
    <string name="birthDate">Data nașterii</string>
    <string name="address">Adresă</string>
    <string name="CNP">CNP</string>

    <string name="sign_in">Autentificare</string>
    <string name="register">Înregistrare</string>
    <string name="logout">Deconectare</string>

    <string name="add_patient_button">Adaugă pacient</string>
    <string name="no_patient_to_display">Momentan nu aveți niciun pacient conectat contului dumneavoastră. Vă rugăm adăugați pacienți.</string>
    <string name="no_doctor_to_display">Momentan nu sunteți înregistrat la cabinetul niciunui doctor.</string>
    <string name="delete_patient">Șterge pacient</string>
    <string name="add_patient_to_doctor">Introduceți CNP-ul pacientului.</string>
    <string name="description_generate_patient_QR_code">Codul QR de mai jos conține informațiile contului dumneavoastră.
        Pentru a vă înregistra la cabinetul unui doctor, acesta va trebui să scaneze codul de mai jos.</string>
    <string name="description_generate_medication_QR_code">Codul QR de mai jos conține informațiile medicației introduse de dumneavoastră.
        Pentru ca pacientul să aibă acces la ea, acesta va trebui să scaneze codul de mai jos.</string>
    <string name="description_scan_patient_QR_code">Scanați codul QR al pacientului pe care doriți să îl adăugați în lista dumneavoastră.</string>
    <string name="description_scan_medication_QR_code">Scanați codul QR al medicației pe care doriți să v-a prescris-o doctorul.</string>


    <string name="age">Vârsta</string>
    <string name="gender">Sex</string>
    <string name="man">M</string>
    <string name="woman">F</string>
    <string name="blood_type">Grupa sanguină</string>
    <string name="rh_type">RH</string>
    <string name="allergies">Alergii</string>
    <string name="emergencyContact">Contact de urgență</string>
    <string name="emergencyContactName">Nume și prenume</string>
    <string name="emergencyContactRelationship">Relație</string>

    <string name="email_address">Adresa de email</string>
    <string name="recover_password">Recuperează parola</string>
    <string name="forgot_password">Mi-am uitat parola</string>

    <string name="action_register_short">Crează cont</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name">"Doctor QR"</string>
    <string name="delete_drug">Șterge medicament</string>

    <string name="diagnostic">Diagnostic</string>
    <string name="prescriptionDate">Data prescrierii</string>
    <string name="dosage">Dozaj</string>
    <string name="NoOfDays">Total zile</string>
    <string name="NoOfTimes">Număr de dăți</string>
    <string name="startDate">Dată de început</string>
    <string name="startHour">Oră de început</string>

    <string name="introdu_spec">Alege specializare</string>
    <string name="drug_name">Nume Medicament</string>
    <string name="adresa_cabinet">Adresă cabinet</string>
    <string name="delete_doctor">Șterge doctor</string>

    <string name="drug_interactions">Studiază efecte</string>
    <string name="drug1">Medicament 1</string>
    <string name="drug2">Medicament 2</string>
    <string name="drugBankInfo">DrugBank este sursa bioinformatică ce conține detalii despre medicamentele existente pe piață.
        Pornind de la interacțiunile cunoscute din DrugBank, am prezis altele noi.</string>
    <string name="introduce_drug_names">Introdu numele medicamentelor:</string>
    <string name="set_drug_name">Introdu numele medicamentului.</string>
    <string name="searchInteraction">Caută</string>
    <string name="interaction">Interacțiune</string>
    <string name="effect">Efect asupra corpului uman</string>
    <string name="effect_text">Combinarea acestor două medicamente are un efect negativ asupra corpului uman.</string>
    <string name="effect_text_maybe">Combinarea acestor două medicamente poate avea un efect negativ asupra corpului uman.</string>
    <string name="not_found_drug">Acest medicament nu există în baza de date.</string>
    <string name="already_added_drug">Acest medicament e adăugat deja în medicație.</string>

    <string name="administrare">Administrare</string>
    <string name="administrare_zi">Administrare/zi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profil</string>
    <string name="doctors">Doctori</string>
    <string name="patients">Pacienți</string>
    <string name="medications">Medicații</string>
    <string name="verify_password">Verificare parolă</string>
    <string name="new_password">Parolă nouă</string>
    <string name="current_password">Parolă curentă</string>
    <string name="email_not_verified">Emailul nu e validat.</string>
    <string name="resend_mail">Retrimite email</string>
    <string name="change_password">Schimbare parolă</string>
    <string name="icon">icon</string>
    <string name="remove">Șterge</string>
    <string name="upload_image">Schimbă fotografia</string>
    <string name="change_icon">Schimbare imagine</string>
    <string name="morning">Dimineața</string>
    <string name="noon">Prânz</string>
    <string name="evening">Seara</string>

<!--    Drug details-->
    <string name="nume">Nume</string>
    <string name="scop">Scop</string>
    <string name="unitate">Unitate</string>
    <string name="descriere">Descriere</string>
    <string name="adaug_medicament">Adaugă medicamente</string>
    <string name="adauga">Adaugă</string>
    <string name="verifica">Verifică interacțiune</string>
    <string name="renunta">Renunță</string>
    <string name="addAnotherDrug">Adaugă alt medicament</string>
    <string name="saveMedication">Salvează Medicația</string>
    <string name="add_drug">Adaugă medicament</string>
    <string name="generate_qr">Generează cod QR</string>
    <string name="back_to_patients">Generează cod QR</string>


    <string name="back_toList">Înapoi la listă</string>
</resources>
