<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        app:showAsAction="never"
        android:id="@+id/my_medications"
        android:title="@string/medications"
        android:icon="@drawable/ic_assignment_black_24dp"
        />
    <item
        app:showAsAction="never"
        android:id="@+id/my_patients"
        android:title="@string/patients"
        android:icon="@drawable/ic_people_black_24dp"
        />
    <item
        app:showAsAction="never"
        android:id="@+id/my_doctors"
        android:title="@string/doctors"
        android:icon="@drawable/ic_people_black_24dp"
        />
    <item
        app:showAsAction="never"
        android:id="@+id/study_drug_interactions"
        android:title="@string/drug_interactions"
        android:icon="@drawable/ic_person_black_24dp"
        />
    <item
        app:showAsAction="never"
        android:id="@+id/my_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_black_24dp"
        />
</menu>