<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".RegisterActivity"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="84dp"
            android:layout_height="82dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/doctor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/register_doctor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/first_name"
            android:imeActionLabel="@string/first_name"
            android:selectAllOnFocus="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appLogo" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/last_name"
            android:imeActionLabel="@string/last_name"
            android:selectAllOnFocus="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

        <Spinner
            android:id="@+id/specialisation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/input_field"
            android:entries="@array/doctors_specialisations"
            android:prompt="@string/country_prompt"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/username"
            android:imeActionLabel="@string/username"
            android:selectAllOnFocus="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/specialisation" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/password"
            android:imeActionLabel="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/email"
            android:imeActionLabel="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/phone"
            android:imeActionLabel="@string/phone"
            android:inputType="phone"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button"
            android:enabled="false"
            android:text="@string/action_register_short"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
